--- a/dom-studies/style.css
+++ b/dom-studies/style.css
@@ -9,8 +9,8 @@
     display: flex;
     flex-direction: column;
     border: 2px solid #000;
-    width: 400px;
-    height: 500px;
+    width: 500px;
+    height: 600px;
     margin: auto;
     margin-top: 100px;
 }
@@ -23,6 +23,13 @@
     justify-content: center;   
     align-items: center;
     transition: all 1s;
+    font-size: 18px;
+}
+
+.instructions {
+    font-size: 12px;
+    text-align: center;
+    border-bottom: 1px dotted #ccc;
 }
 
 .buttons {
